--- a/weapp/apps/customerized_apps/lottery/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/lottery/templates/editor/workbench.html
@@ -43,6 +43,17 @@
         .form-control[disabled], .form-control[readonly], fieldset[disabled] .form-control{
             cursor: pointer;
         }
+
+        .radio-mask{
+            position: absolute;
+            height: 35px;
+            width: 65px;
+            background: black;
+            opacity: 0.5;
+            margin-top: -2px;
+            margin-left: -72px;
+            border-radius: 4px;
+        }
     </style>
 {% endblock %}
 
@@ -158,6 +169,9 @@
           if (firstPage) {
             pageManagerView.activePage(page);
           }
+            //临时方案
+            $temp_disabled_radio = $("input[value='no_limit']");
+              hideNoLimitOption($temp_disabled_radio);
 
             W.Broadcaster.on("image_dialog_select:deleteImage", function(cid){
 				var comp = W.component.CID2COMPONENT[cid],
@@ -193,6 +207,7 @@
     };
     
     $(document).ready(function() {
+        var $temp_disabled_radio;
       var windowHeight = $(window).height();
       var height = windowHeight - 350;
 
@@ -355,7 +370,20 @@
                 });
           }
         W.Broadcaster.trigger('designpage:cancel_delete');
+
+          //禁用不限次数选择(临时)，存在高并发bug
+          if(!$temp_disabled_radio || $temp_disabled_radio.length <= 0){
+              $temp_disabled_radio = $("input[value='no_limit']");
+              hideNoLimitOption($temp_disabled_radio);
+          }
       });
+
+        function hideNoLimitOption($el){
+            if(!$temp_disabled_radio || $temp_disabled_radio.length <= 0) return;
+            $el = $("input[value='no_limit']");
+              $el.parent().after("<span class='radio-mask' data-toggle='tooltip' title='因近期出现个别粉丝违规操作（刷票）的情况，该功能暂停使用！'></span>");
+              $('[data-toggle="tooltip"]').tooltip();
+        }
 
         //初始化中奖率说明dialog
         ensureNS('W.dialog.lottery');
