重构【百宝箱】【调研、活动、反馈】后台展示逻辑与手机端逻辑统一

--- a/weapp/apps/customerized_apps/event/templates/editor/event_participances.html
+++ b/weapp/apps/customerized_apps/event/templates/editor/event_participances.html
@@ -181,7 +181,7 @@ $(document).ready(function() {
             app: 'apps/event',
             resource: 'event_participances-export',
             args: {
-				'export_id':export_id,
+				'id':export_id,
 				'participant_name': participant_name,
 				'start_time': startTime,
 				'end_time': endTime
