--- a/weapp/apps/customerized_apps/sign/templates/webapp/m_sign.html
+++ b/weapp/apps/customerized_apps/sign/templates/webapp/m_sign.html
@@ -1,5 +1,5 @@
 {% extends "apps_base.html" %}
-{% load project_filter %}
+
 
 {% block css %}
 <link type="text/css" rel="stylesheet" media="all" href="/static_v2/css/emojilc6cc2.css">
@@ -12,16 +12,6 @@
         color: #8F8F8F;
     }
 
-    .wui-mask{
-        position: fixed;
-        top: 0;
-        left: 0;
-        display: none;
-        opacity: 0.8 !important;
-        background: black;
-        height: 100%;
-        width: 100%;
-    }
 
     .wui-resultDialog{
         background: white;
@@ -184,7 +174,6 @@
 
 {% block js %}
 <script type="text/javascript">
-    W.pageId = "{{request.GET.page_id}}";
     var prize_info = JSON.parse('{{ prize_info|safe}}');
     var status = "{{ activity_status }}";
     var resultDialog;
@@ -214,12 +203,7 @@
             }
 
         });
-        //初始化result dialog
-        this.$mask = $('<div class="wui-mask"></div>');
-        this.$mask.on('click', function () {
-            that.close();
-        });
-        $('body').append(this.$mask);
+
         this.$el.find('.xa-closeDialog').on('click', function () {
             that.close();
         });
@@ -255,17 +239,15 @@
             this.$title.text(data);
             this.$dialogContent.hide();
         }
-        this.$mask.show();
+        mask('show');
         this.$el.show();
     };
     ResultDialog.prototype.close = function () {
-        this.$mask.hide();
+        mask('hide');
         this.$el.hide();
     };
 
     $(function () {
-        //隐藏参与活动按钮
-        $('.xa-submitButtonContainer').hide();
         if(W.isPC){
             return false;
         }
@@ -317,16 +299,27 @@
         //发送请求，单独获取数据，优化首页时间
         getDynamicData();
 
-        //填充签到奖励信息
-        fillPrizeInfo(prize_info, true);
-        //绑定规则信息事件
         //查看规则
         $('.wa-signPageDiv').find('.wa-rules').on('click', function () {
             $('.wa-signPageDiv').hide();
             $('.wa-rules-div').show();
             $('title').html('活动规则');
         });
-        //积分数据
+        //填充积分规则
+        fillRulesInfo(prize_info);
+        //返回
+        $('.wui-rules-footer-div').find('.wa-btn-back').on('click', function () {
+            $('.wa-rules-div').hide();
+            $('.wa-signPageDiv').show();
+            $('title').html('签到');
+        });
+        //个人中心
+        $('.wa-rules-i-center').on('click', function () {
+            window.location.href = '/termite/workbench/jqm/preview/?module=user_center&model=user_info&action=get&workspace_id=mall&webapp_owner_id=' + W.webappOwnerId;
+        });
+    });
+
+    function fillRulesInfo(prize_info){
         var prize_rules = prize_info.prize_rules;
 
         var rule_arr = [];
@@ -377,28 +370,16 @@
           }
         }
         $('.wa-rules-div').find('.wa-rules-i-content').html(rule_html);
+    }
 
-        //返回
-        $('.wui-rules-footer-div').find('.wa-btn-back').on('click', function () {
-            $('.wa-rules-div').hide();
-            $('.wa-signPageDiv').show();
-            $('title').html('签到');
-        });
-        //个人中心
-        $('.wa-rules-i-center').on('click', function () {
-            window.location.href = '/termite/workbench/jqm/preview/?module=user_center&model=user_info&action=get&workspace_id=mall&webapp_owner_id=' + W.webappOwnerId;
-        });
-    });
     function fillUserInfo(data){
         //填充用户信息xx就是这儿
         $('.wa-username').find('p').html(data.member_info.username);
         $('.wa-user-integral').html(data.member_info.user_integral);
         $('.wa-user-icon').find('img').attr('src', data.member_info.user_icon);
-        // //填充用户信息xx就是这儿 备份
-        // $('.wa-username').find('p').html('{{ member_info.user_name|safe }}');
-        // $('.wa-user-integral').html('{{ member_info.user_integral }}');
-        // $('.wa-user-icon').find('img').attr('src', '{{ member_info.user_icon }}');
+
     }
+
     function getDynamicData(){
         loadingStatus(true);
         W.getApi().call({
@@ -410,8 +391,14 @@
                 id: W.appRecordId
             },
             success:function(data){
+                status = data.status;
+                W.isMember = data.isMember;
+                prize_info = data.prize_info;
                 //填充用户信息
                 fillUserInfo(data);
+                //填充签到奖励信息
+                fillPrizeInfo(data.prize_info, true);
+
             },
             error:function(data){
                 if(data.errMsg == 'is_deleted'){
